--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
         html {
             height: 100%
         }
-
         body,
         h1,
         h2,
@@ -30,7 +29,7 @@
         .bgimg {
             background-repeat: no-repeat;
             background-size: cover;
-            background-image: url(/media/completo.jpg);
+            background-image: url(./media/completo.jpg);
             min-height: 90%;
         }
     </style>
