--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <style>
         body,
         html {
-            height: 100%
+            height: 100%;
+            scroll-behavior: smooth
         }
         body,
         h1,
@@ -284,27 +285,22 @@
     <!-- About Container -->
     <div class="w3-container w3-padding-64 w3-red w3-grayscale w3-xlarge" id="about">
         <div class="w3-content">
-            <h1 class="w3-center w3-jumbo" style="margin-bottom:64px">About</h1>
+            <h1 class="w3-center w3-jumbo" style="margin-bottom:64px">No Tiene Nombre</h1>
             <p>The Pizza Restaurant was founded in blabla by Mr. Italiano in lorem ipsum dolor sit amet, consectetur
                 adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
                 veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <p><strong>The Chef?</strong> Mr. Italiano himself<img src="/w3images/chef.jpg" style="width:150px"
+            <p><strong>The Chef?</strong> Mr. Italiano himself<img src="./media/podcast.JPG" style="width:150px"
                     class="w3-circle w3-right" alt="Chef"></p>
             <p>We are proud of our interiors.</p>
-            <img src="/w3images/onepage_restaurant.jpg" style="width:100%" class="w3-margin-top w3-margin-bottom"
+            <img src="./media/local.jpg" style="width:100%" class="crop w3-margin-top w3-margin-bottom"
                 alt="Restaurant">
             <h1><b>Opening Hours</b></h1>
 
             <div class="w3-row">
                 <div class="w3-col s6">
-                    <p>Mon & Tue CLOSED</p>
-                    <p>Wednesday 10.00 - 24.00</p>
-                    <p>Thursday 10:00 - 24:00</p>
-                </div>
-                <div class="w3-col s6">
-                    <p>Friday 10:00 - 12:00</p>
-                    <p>Saturday 10:00 - 23:00</p>
-                    <p>Sunday Closed</p>
+                    <p>Lunes CERRADO</p>
+                    <p>Martes a jueves 12.30 - 00.30</p>
+                    <p>Viernes y Sábado 13:30 - 01:30</p>
                 </div>
             </div>
 
