--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amatic+SC">
+    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
     <style>
         body,
         html {
             height: 100%;
             scroll-behavior: smooth
         }
+
         body,
         h1,
         h2,
@@ -41,6 +45,7 @@
     <!-- Navbar (sit on top) -->
     <div class="w3-top w3-hide-small">
         <div class="w3-bar w3-xlarge w3-black w3-opacity w3-hover-opacity-off" id="myNavbar">
+            <img src="./media/logo.jpg" alt="Logo" class="logo">
             <a href="#" class="w3-bar-item w3-button">Inicio</a>
             <a href="#menu" class="w3-bar-item w3-button">MENU</a>
             <a href="#about" class="w3-bar-item w3-button">NOSOTROS</a>
@@ -191,26 +196,26 @@
                 <p class="w3-text-grey">Completo Italiano + Beb Lata + Papas Normales + Empanaditas Queso</p>
                 <hr>
                 <h1><b>PROMO 10</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$17.990</span></h1>
-                <p class="w3-text-grey">2 Churrascos Italiano  + 2 Beb Lata + 2 Papas normales</p>
+                <p class="w3-text-grey">2 Churrascos Italiano + 2 Beb Lata + 2 Papas normales</p>
                 <hr>
                 <h1><b>PROMO 11</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$10.990</span></h1>
-                <p class="w3-text-grey">2 Completos Italianos  + 2 Beb Lata + 2 Papas normalesa/p>
-                <hr>
+                <p class="w3-text-grey">2 Completos Italianos + 2 Beb Lata + 2 Papas normalesa/p>
+                    <hr>
                 <h1><b>PROMO 12</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$11.990</span></h1>
-                <p class="w3-text-grey">2 As Italianos  + 2 Beb Lata + 2 Papas normales</p>
+                <p class="w3-text-grey">2 As Italianos + 2 Beb Lata + 2 Papas normales</p>
                 <hr>
                 <h1><b>PROMO 13</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$24.990</span></h1>
-                <p class="w3-text-grey">4 Churrascos +  Bebida 1,5L</p>
+                <p class="w3-text-grey">4 Churrascos + Bebida 1,5L</p>
                 <hr>
                 <h1><b>PROMO 14</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$22.490</span></h1>
-                <p class="w3-text-grey">4 As Italiano +  4 Papas normales + Empanaditas</p>
+                <p class="w3-text-grey">4 As Italiano + 4 Papas normales + Empanaditas</p>
                 <hr>
                 <h1><b>PROMO 15</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$18.990</span></h1>
-                <p class="w3-text-grey">4 Completos Italianos +  4 Papas normales + Bebida 1,5L</p>
-                <hr> 
+                <p class="w3-text-grey">4 Completos Italianos + 4 Papas normales + Bebida 1,5L</p>
+                <hr>
                 <h1><b>PROMO 16</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$5.490</span></h1>
                 <p class="w3-text-grey">2 Completos Italianos + 1 Bebida Lata</p>
-                <hr>                
+                <hr>
                 <h1><b>PROMO 17</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$3.990</span></h1>
                 <p class="w3-text-grey">1 Papa frita + 2 Sopaipillas + 1 bebida lata</p>
                 <hr>
@@ -239,7 +244,8 @@
                 <hr>
             </div>
             <div id="Agregados" class="w3-container menu w3-padding-32 w3-white">
-                <h1><b>Papas Fritas Pequeñas</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$1.000</span></h1>                <hr>
+                <h1><b>Papas Fritas Pequeñas</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$1.000</span></h1>
+                <hr>
 
                 <h1><b>Papas Fritas Normal</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$2.000</span></h1>
                 <hr>
@@ -282,19 +288,24 @@
         </div>
     </div>
 
+    <div class="whatsapp">
+        <a href="https://wa.me/56912345678" class="whatsapp-icon" target="_blank">
+            <i class="fa-brands fa-square-whatsapp"></i>
+        </a>
+    </div>
+
     <!-- About Container -->
     <div class="w3-container w3-padding-64 w3-red w3-grayscale w3-xlarge" id="about">
         <div class="w3-content">
             <h1 class="w3-center w3-jumbo" style="margin-bottom:64px">No Tiene Nombre</h1>
-            <p>The Pizza Restaurant was founded in blabla by Mr. Italiano in lorem ipsum dolor sit amet, consectetur
-                adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <p><strong>The Chef?</strong> Mr. Italiano himself<img src="./media/podcast.JPG" style="width:150px"
+            <p>En "No Tiene Nombre" puedes ser el creador de tu experiencia única. Diseña tu propio completo, churrasco o papas fritas y dale el nombre que quieras... o simplemente deja que siga siendo "Sin Nombre", como nuestro original concepto.
+                Ubicados a pasos del terminal de buses de El Quisco, ofrecemos comida rápida llena de sabor con opciones personalizables para todos los gustos. También contamos con promociones individuales, para parejas y grupales, perfectas para compartir.
+                También tenemos los clasicos de siempre, completos, churrascos y papas fritas. </p>
+            <p><strong>Los genios?</strong> Andrés y Claudio<img src="./media/podcast.JPG" style="width:150px"
                     class="w3-circle w3-right" alt="Chef"></p>
-            <p>We are proud of our interiors.</p>
-            <img src="./media/local.jpg" style="width:100%" class="crop w3-margin-top w3-margin-bottom"
-                alt="Restaurant">
-            <h1><b>Opening Hours</b></h1>
+            <p>Ven y disfruta de un ambiente relajado donde la creatividad y el buen gusto se combinan.</p>
+            <img src="./media/local.png" style="width:100%" class="w3-margin-top w3-margin-bottom" alt="Restaurant">
+            <h1><b>Horarios de atención</b></h1>
 
             <div class="w3-row">
                 <div class="w3-col s6">
