--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
     </div>
 
     <!-- About Container -->
-    <div class="w3-container w3-padding-64 w3-red w3-grayscale w3-xlarge" id="about">
+    <div class="w3-container w3-padding-64 w3-black w3-grayscale w3-xlarge" id="about">
         <div class="w3-content">
             <h1 class="w3-center w3-jumbo" style="margin-bottom:64px">No Tiene Nombre</h1>
             <p>En "No Tiene Nombre" puedes ser el creador de tu experiencia única. Diseña tu propio completo, churrasco o papas fritas y dale el nombre que quieras... o simplemente deja que siga siendo "Sin Nombre", como nuestro original concepto.
@@ -319,7 +319,15 @@
     </div>
 
     <!-- Image of location/map -->
-    <img src="/w3images/map.jpg" class="w3-image w3-greyscale" style="width:100%;" id="myMap">
+    <section id="ubicacion" class="map-section">
+        <h2>Encuéntranos en El Quisco</h2>
+        <div class="map-container">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d832.6737375915199!2d-71.69443778693673!3d-33.40512185219359!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x966217de84ddbd83%3A0x5e3eedc306da4296!2sNo%20Tiene%20Nombre!5e0!3m2!1ses!2scl!4v1747802739950!5m2!1ses!2scl"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </section>
 
     <!-- Contact -->
     <div class="w3-container w3-padding-64 w3-blue-grey w3-grayscale-min w3-xlarge">
