--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <title>NTN Page</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amatic+SC">
     <link rel="stylesheet" href="./CSS/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -339,7 +339,7 @@
     </section>
 
     <!-- Contact -->
-    <div class="w3-container w3-padding-64 w3-blue-grey w3-grayscale-min w3-xlarge">
+    <div class="contacto w3-container w3-padding-64 w3-blue-grey w3-grayscale-min w3-xlarge">
         <div class="w3-content">
             <h1 class="w3-center w3-jumbo" style="margin-bottom:64px">Contacto</h1>
             <p>Llamanos o escribenos</p>
