--- a/index.html
+++ b/index.html
@@ -17,16 +17,6 @@
             scroll-behavior: smooth
         }
 
-        body,
-        h1,
-        h2,
-        h3,
-        h4,
-        h5,
-        h6 {
-            font-family: "Amatic SC", sans-serif
-        }
-
         .menu {
             display: none
         }
@@ -72,8 +62,8 @@
             <span class="w3-tag w3-xlarge">Viernes y Sábado 13.30 a 01.30</span>
         </div>
         <div class="w3-display-middle w3-center">
-            <span class="w3-text-white w3-hide-small" style="font-size:100px">Elige tus ingredientes</span>
-            <span class="w3-text-white w3-hide-large w3-hide-medium" style="font-size:60px"><b>Elige tus
+            <span class="ingredientes-titulo w3-text-white w3-hide-small" style="font-size:100px">Elige tus ingredientes</span>
+            <span class="ingredientes-titulo w3-text-white w3-hide-large w3-hide-medium" style="font-size:60px"><b>Elige tus
                     ingredientes</b></span>
             <p><a href="#menu" class="w3-button w3-xxlarge w3-black">Ver la carta</a></p>
         </div>
