--- a/index.html
+++ b/index.html
@@ -294,16 +294,35 @@
     </div>
 
     <!-- About Container -->
-    <div class="w3-container w3-padding-64 w3-black w3-grayscale w3-xlarge" id="about">
+    <div class="w3-container w3-padding-64 w3-black w3-xlarge" id="about">
         <div class="w3-content">
             <h1 class="w3-center w3-jumbo" style="margin-bottom:64px">No Tiene Nombre</h1>
             <p>En "No Tiene Nombre" puedes ser el creador de tu experiencia única. Diseña tu propio completo, churrasco o papas fritas y dale el nombre que quieras... o simplemente deja que siga siendo "Sin Nombre", como nuestro original concepto.
                 Ubicados a pasos del terminal de buses de El Quisco, ofrecemos comida rápida llena de sabor con opciones personalizables para todos los gustos. También contamos con promociones individuales, para parejas y grupales, perfectas para compartir.
                 También tenemos los clasicos de siempre, completos, churrascos y papas fritas. </p>
-            <p><strong>Los genios?</strong> Andrés y Claudio<img src="./media/podcast.JPG" style="width:150px"
-                    class="w3-circle w3-right" alt="Chef"></p>
+            <p><strong>Los genios?</strong> Andrés y Claudio<img src="./media/podcast.JPG" style="width:150px" class="w3-circle w3-right" alt="Chef"></p>
+            <section class="podcast-section">
+  <div class="podcast-container">
+    <h2>No Tiene Nombre – Podcast</h2>
+    <p>El podcast que No Tiene Nombre es tu espacio para hablar de todo y nada a la vez. Desde las últimas noticias hasta nuestras experiencias más divertidas, nos sumergimos en una variedad de temas con una buena dosis de risas y conversaciones genuinas. Únete a nosotros.</p>
+        <div class="podcast-buttons">
+      <a href="https://www.youtube.com/@NoTieneNombrePodcast" target="_blank" class="podcast-btn youtube">
+        <img src="https://img.icons8.com/ios-filled/24/ffffff/youtube-play.png" alt="YouTube" />
+        Ver en YouTube
+      </a>
+      <a href="https://open.spotify.com/show/7ytI3GHbxWjtwu9v990B68?si=05926b6f659a4a9a" target="_blank" class="podcast-btn spotify">
+        <img src="https://img.icons8.com/ios-filled/24/ffffff/spotify--v1.png" alt="Spotify" />
+        Escuchar en Spotify
+      </a>
+    </div>
+
+    <div class="podcast-video">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/iA5HCXiMc4Q?si=a9-X1aZuhZEk7C1l" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
+  </div>
+</section>
+
             <p>Ven y disfruta de un ambiente relajado donde la creatividad y el buen gusto se combinan.</p>
-            <img src="./media/local.png" style="width:100%" class="w3-margin-top w3-margin-bottom" alt="Restaurant">
             <h1><b>Horarios de atención</b></h1>
 
             <div class="w3-row">
